cmake_minimum_required(VERSION 3.1.0)
project(unitree_actuator_sdk/TunnelingCartCode)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

include_directories(include)
link_directories(lib)

if(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "aarch64") 
    set(EXTRA_LIBS libUnitreeMotorSDK_Arm64.so)
else()
    set(EXTRA_LIBS libUnitreeMotorSDK_Linux64.so)
endif()

#example
# All Tunneling Related Programs
add_executable(MotorTest000 MotorControl/MotorTest.cpp)
target_link_libraries(MotorTest000 ${EXTRA_LIBS})

add_executable(MotorTest001 MotorControl/MotorTestYago.cpp)
target_link_libraries(MotorTest001 ${EXTRA_LIBS})



set(LIBRARY_OUTPUT_PATH "../../lib")
add_subdirectory(thirdparty/pybind11)
pybind11_add_module(unitree_actuator_sdk thirdparty/python_wrapper/wrapper.cpp)
target_link_libraries(unitree_actuator_sdk PRIVATE ${EXTRA_LIBS})
set_target_properties(unitree_actuator_sdk PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${LIBRARY_OUTPUT_PATH}")

